--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,9 @@ services:
       - "9999:9999"
     volumes:
       - ./:/app/
+    environment:
+      - POSTGRES_DB=sampledb
+      - POSTGRES_USER=sampleuser
+      - POSTGRES_PASSWORD=samplesecret
+      - POSTGRES_HOST=onlyours-postgres
+      - POSTGRES_PORT=5432
